--- a/text/Makefile
+++ b/text/Makefile
@@ -13,8 +13,10 @@ tex_files = $(wildcard *.tex)
 bib_files = $(wildcard */*.bib)
 pdf_files = $(wildcard *.pdf)
 
+
 whitepaper.pdf: $(tex_files) $(bib_files) $(pdf_files)
 	pdflatex -shell-escape whitepaper | tee latex.out ; \
+	bibtex whitepaper; \
 	bibtex whitepaper; \
 	pdflatex -shell-escape whitepaper | tee latex.out; \
 	pdflatex -shell-escape whitepaper | tee latex.out; \
